Story section work in progress

--- a/BerkshireFinalFinal.html
+++ b/BerkshireFinalFinal.html
@@ -62,15 +62,18 @@
             <h2>Our Favorite Holding Period is Forever</h2>
           </div>
         </div>
-
-        <h1>Berkshire Hathaway</h1>
-        <h2> Our Favorite Holding Period is Forever </h2>
-      </div>
-      <div class="text-center">
-        <a href="#news" class="scroll-down"></a>
-
       </div>
     </div>
+
+
+    <!--Nav: Description-->
+    <div class="container-page">
+      <div class="story-title">
+        <p class="title">Our Story</p>
+        <span id="bar"></span>
+      </div>
+    </div>
+
 
 
 
