--- a/berkshireinc.html
+++ b/berkshireinc.html
@@ -13,7 +13,6 @@
   <link rel='dns-prefetch' href='http://s.w.org/' />
 
   <!--Style Sheets-->
-  <link rel="stylesheet" href="Berkshireinc.css">
   <link rel="stylesheet" href="BerkshireFinalFinal.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"/>
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans%3A400%2C+300%2C400%2C600%2C700%2C800%26subset%3Dlatin%2Clatin-ext&amp;ver=1.8' type='text/css' media='all' />
@@ -73,16 +72,12 @@
   
   <div class="bg">
 	<img id="story" src="img_story.jpg" style="width:100%;"></img> 
-	<div class="centered">
-		<h1>OUR STORY</h1>
-	</div>
+	<div class="centered"></div>
   </div>
 
   <div class="container" id="storytext">
 	<p id="storytitle">BERKSHIRE HATHAWAY INC. </p>
-	<p id="storydescription"> description of the firm blablablabla balbaaarvSKNblablablabla balbaaarvSKNblablablabla 
-	blablablabla balbaaarvSKNblablablabla balbaaarvSKNblablablablablablablabla balbaaarvSKNblablablabla balbaaarvSKNblablablablablablablabla 
-	balbaaarvSKNblablablablabalbaaarvSKNblablablablabalbaaarvSKNblablablabla balbaaarvSKNblablablabla balbaaarvSKNblablablabla balbaaarvSKN </p>
+	<p id="storydescription"> Berkshire Hathaway Inc. operates as a holding company. It provides property and casualty insurance and reinsurance, as well as life, accident, and health reinsurance; and operates railroad systems in North America. The company also generates, transmits, and distributes electricity primarily from solar, wind, nuclear, geothermal, and hydro sources; operates natural gas distribution and storage facilities, interstate pipelines, and compressor and meter stations; and holds interest in coal mining assets. In addition, it offers real estate brokerage services; invests in fixed-income and equity instruments; and engages in manufactured housing and finance business, leasing of transportation equipment, and furniture leasing activities. Further, the company manufactures boxed chocolates and other confectionery products; specialty chemicals, metal cutting tools, and other products; flooring, insulation, roofing and engineered, building and engineered components, paints and coatings, and bricks and masonry products; recreational vehicles, apparel products, jewelry, and custom picture framing products; and alkaline batteries. Additionally, it manufactures structural investment castings and forged components, machined airframe components, and engineered critical fasteners; airfoil castings; titanium and nickel superalloy melted and mill products; and seamless pipes, fittings, and forgings. The company distributes newspapers, televisions, and information; franchises and services quick service restaurants; distributes electronic components; and offers steel and logistics services, professional aviation training programs, and fractional aircraft ownership programs. In addition, it retails automobiles; furniture, bedding, and accessories; household appliances, electronics, and computers; jewelry, watches, crystal, china, stemware, flatware, gifts, and collectibles; kitchenware; and motorcycle accessories. The company was founded in 1889 and is headquartered in Omaha, Nebraska </p>
 </div>
 
 
