--- a/News.html
+++ b/News.html
@@ -11,6 +11,28 @@
 </head>
 
 <body>
+  <div class="container">
+  <div class="row">
+    <div class="col">
+      1 of 2
+    </div>
+    <div class="col">
+      1 of 2
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      1 of 3
+    </div>
+  </div>
+</div>
+   
     <!-- FOOTER -->
     <footer id="footerabout" class="section">
         <div class="d-flex justify-content-center" id="socialMedia">
