--- a/News.html
+++ b/News.html
@@ -1,38 +1,39 @@
 <!DOCTYPE HTML>
 <html lang="">
+
 <head>
     <meta charset="UTF-8">
     <title>News</title>
     <link rel="stylesheet" type="text/css" href="BerkshireFinalFinal.css">
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
     <script language="JavaScript" type="text/javascript" src="Berkshire-JS.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-  <div class="container">
-  <div class="row">
-    <div class="col">
-      1 of 2
+    <div class="container">
+        <div class="row">
+            <div id=Reports class="col-lg-4">
+                <img id="" src="" alt="" height="" width="">
+                <h4>Location</h4>
+                <p>
+                    By car via Frankfurt airport, from there approximately 4km to Schwanheim (see directions on map). From Hauptbahnhof (central train station) by street car line 12 to Schwanheim Endstation (approximately 7km, duration approximately 30 minutes). From the airport by taxi approximately €10,- To the trade fair by car approximately 8km, by public transportation 35-40 minutes.
+                </p>
+            </div>
+            <div id=AGM_Info class="col-lg-4">
+                <h4>Schwanheim</h4>
+                <p>
+                    The district of Schwanheim offers a beautiful historical center. An approximate 5-minute walk will bring you to our recreational surroundings. The city center of Frankfurt offers many sights to see, museums and other cultural interests, as well as the international Trade Fair Frankfurt, all easily reachable by public transportation. Frankfurt airport is also nearby.
+                </p>
+            </div>
+            <div id="News_Releases" class="col-lg-4">
+                <h4>Welcome</h4>
+                <p> Welcome to our Hotel zur Post! We are a small family-operated hotel in the historical part of Frankfurt am Main, Schwanheim. Our hotel is located on a traffic-reduced street, only a few hundred yards from the municipal forest. Downtown Frankfurt with its numerous shopping opportunities as well as its historical center may be easily reached by street car (about a 30 minute ride). Rhein-Main Frankfurt airport is about 4km away, the Trade Fair Frankfurt about 8km.</p>
+            </div>
+        </div>
     </div>
-    <div class="col">
-      1 of 2
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      1 of 3
-    </div>
-  </div>
-</div>
-   
     <!-- FOOTER -->
     <footer id="footerabout" class="section">
         <div class="d-flex justify-content-center" id="socialMedia">
@@ -49,4 +50,5 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </body>
+
 </html>
