Added Cards from Bootstrap

--- a/News.html
+++ b/News.html
@@ -16,21 +16,39 @@
     <div class="container">
         <div class="row">
             <div id=Reports class="col-lg-4">
-                <img id="" src="" alt="" height="" width="">
-                <h4>Location</h4>
-                <p>
-                    By car via Frankfurt airport, from there approximately 4km to Schwanheim (see directions on map). From Hauptbahnhof (central train station) by street car line 12 to Schwanheim Endstation (approximately 7km, duration approximately 30 minutes). From the airport by taxi approximately €10,- To the trade fair by car approximately 8km, by public transportation 35-40 minutes.
-                </p>
+                <div class="card" style="width: 20rem;">
+                    <div class="card-body">
+                        <h4 class="card-title">Annual and Interim Reports</h4>
+                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
             </div>
             <div id=AGM_Info class="col-lg-4">
-                <h4>Schwanheim</h4>
-                <p>
-                    The district of Schwanheim offers a beautiful historical center. An approximate 5-minute walk will bring you to our recreational surroundings. The city center of Frankfurt offers many sights to see, museums and other cultural interests, as well as the international Trade Fair Frankfurt, all easily reachable by public transportation. Frankfurt airport is also nearby.
-                </p>
+                <div class="card" style="width: 20rem;">
+                    <div class="card-body">
+                        <h4 class="card-title">Annual General Meeting</h4>
+                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
             </div>
             <div id="News_Releases" class="col-lg-4">
-                <h4>Welcome</h4>
-                <p> Welcome to our Hotel zur Post! We are a small family-operated hotel in the historical part of Frankfurt am Main, Schwanheim. Our hotel is located on a traffic-reduced street, only a few hundred yards from the municipal forest. Downtown Frankfurt with its numerous shopping opportunities as well as its historical center may be easily reached by street car (about a 30 minute ride). Rhein-Main Frankfurt airport is about 4km away, the Trade Fair Frankfurt about 8km.</p>
+                <div class="card" style="width: 20rem;">
+                    <div class="card-body">
+                        <h4 class="card-title">News</h4>
+                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="http://www.berkshirehathaway.com/news/2017news.html" class="card-link">2017</a>
+                        <a href="http://www.berkshirehathaway.com/news/2016news.html" class="card-link">2016</a>
+                        <a href="http://www.berkshirehathaway.com/news/2015news.html" class="card-link">2015</a>
+                        <a href="http://www.berkshirehathaway.com/news/2014news.html">2014</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
