--- a/BerkshireFinalFinal.html
+++ b/BerkshireFinalFinal.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <!-- NAVBAR -->
+<!-- NAVBAR -->
     <div id="navbar">
       <nav class="navbar navbar-fixed-top navbar-toggleable-sm transparent">
         <button class="navbar-toggler navbar-toggler-right" id="mainNav" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,19 +52,48 @@
       </nav>
     </div>
 
-    <!--Nav: Home-->
-    <div class="container-page">
-      <div id="home">
-        <div id="table-cell">
-          <img src="https://images.unsplash.com/photo-1507679799987-c73779587ccf?auto=format&fit=crop&w=1951&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D">
-          <div id="centertext">
-            <h1>BERKSHIRE HATHAWAY INC.</h1>
-            <h2>Our Favorite Holding Period is Forever</h2>
+<!--Nav: Home-->
+  <div class="container">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block" src="suit.jpg"   alt="Our holding period is forever">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>BERKSHIRE HATHAWAY INC.</h3>
+            <p>Our Favorite Holding Period is Forever</p>
           </div>
-        </div>
+      </div>
+    <div class="carousel-item">
+        <img class="d-block" src="company.jpg"   "alt="Contact us">
+          <div class="carousel-caption d-none d-md-block" >
+            <h3> Help us expand our portfolio and we will help you develop your business </h3>
+            <div class="d-flex justify-content-center" >
+              <a href="Contact.html" class="btn btn-outline-light btn-lg my-2 my-sm-0" id="btn1">Contact us!</a>
+            </div>
+          </div>
+    </div>
+      <div class="carousel-item">
+        <img class="d-block" src="stock.jpg"  alt="Stock market">
+          <div class="carousel-caption d-none d-md-block" id='black-caption'>
+            <h3>The company with highest stock prices</h3>
+          </div>
       </div>
     </div>
-
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
 
     <!--Nav: Description-->
     <div class="container-page">
@@ -73,8 +102,6 @@
         <span id="bar"></span>
       </div>
     </div>
-
-
 
 
     <!-- FOOTER -->
