--- a/News.html
+++ b/News.html
@@ -19,10 +19,11 @@
                 <div class="card" style="width: 20rem;">
                     <div class="card-body">
                         <h4 class="card-title">Annual and Interim Reports</h4>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <h6 class="card-subtitle mb-2 text-muted">2017</h6>
+                        <p class="card-text">"Increased stock of Apple and Bank of New York Mellon, while reducing International Business Machines.Twenty-First Century Fox dropped."</p>
+                        <a href="http://www.berkshirehathaway.com/qtrly/links1stqtr17.html" class="card-link">1. Quarter</a>
+                        <a href="http://www.berkshirehathaway.com/qtrly/links2ndqtr17.html" class="card-link">2. Quarter</a>
+                        <a href="http://www.berkshirehathaway.com/qtrly/links3rdqtr17.html" class="card-link">3. Quarter</a>
                     </div>
                 </div>
             </div>
@@ -30,10 +31,10 @@
                 <div class="card" style="width: 20rem;">
                     <div class="card-body">
                         <h4 class="card-title">Annual General Meeting</h4>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <h6 class="card-subtitle mb-2 text-muted">Info</h6>
+                        <p class="card-text">For the third year, Yahoo will webcast the May 5 meeting, going live at 9am. <a href="https://finance.yahoo.com/brklivestream">Watch the Stream Here</a></p>
+                        <a href="http://www.berkshirehathaway.com/meet01/2018Meetinginfo.pdf" class="card-link">2018</a>
+                        <a href="http://www.berkshirehathaway.com/meet01/VisGuide2017.pdf" class="card-link">2017</a>
                     </div>
                 </div>
             </div>
@@ -41,12 +42,12 @@
                 <div class="card" style="width: 20rem;">
                     <div class="card-body">
                         <h4 class="card-title">News</h4>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h6 class="card-subtitle mb-2 text-muted">Past 4 Year Releases</h6>
+                        <p class="card-text">"A very impressed market has traded Apple's stock up by 45% since the beginning of the year. This has nicely lifted the value of Berkshire's stake, which according to the company's latest regulatory filing stands at over 130 million shares." - The Motley Fool</p>
                         <a href="http://www.berkshirehathaway.com/news/2017news.html" class="card-link">2017</a>
                         <a href="http://www.berkshirehathaway.com/news/2016news.html" class="card-link">2016</a>
                         <a href="http://www.berkshirehathaway.com/news/2015news.html" class="card-link">2015</a>
-                        <a href="http://www.berkshirehathaway.com/news/2014news.html">2014</a>
+                        <a href="http://www.berkshirehathaway.com/news/2014news.html" class="card-link">2014</a>
                     </div>
                 </div>
             </div>
