--- a/berkshireinc.html
+++ b/berkshireinc.html
@@ -81,10 +81,25 @@
 	<p id="storydescription2">Additionally, it manufactures structural investment castings and forged components, machined airframe components, and engineered critical fasteners; airfoil castings; titanium and nickel superalloy melted and mill products; and seamless pipes, fittings, and forgings. Our company distributes newspapers, televisions, and information; franchises and services quick service restaurants; distributes electronic components; and offers steel and logistics services, professional aviation training programs, and fractional aircraft ownership programs. In addition, we retails automobiles; furniture, bedding, and accessories; household appliances, electronics, and computers; jewelry, watches, crystal, china, stemware, flatware, gifts, and collectibles; kitchenware; and motorcycle accessories. Our company was founded in 1889 and is headquartered in Omaha, Nebraska </p>
 </div>
 
-<div class="ig">
+	<div class="ig">
 	<img id="story" src="img_random.jpg" style="width:100%;"></img> 
 	<div class="centered"></div>
   </div>
+
+ <div id="box1" class= "circlepics" style="width:20%;"></img>
+			<a href="https://nl.wikipedia.org/wiki/Warren_Buffett"><img class="circle" id="warren" src= img_warren.jpg> </img></a>
+			<div id="overlay">
+				<span id="plus">Warren Buffet - CEO </span>
+			</div>
+</div> 
+
+			<a href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=255257&privcapId=255251&previousCapId=258278&previousTitle=Berkshire%20Hathaway%20Energy%20Company">	<img class="circle" id="marc"src= img_marc.jpg> </img></a>
+			<a href="https://en.wikipedia.org/wiki/Charlie_Munger"><img class="circle" id="charlie" src= img_charlie.jpg> </img></a>
+			<a href="https://en.wikipedia.org/wiki/Oliver_Chace"><img class="circle" id="oliver" src= img_oliver.jpg> </img><a/>
+ </div>
+
+
+ <div class="card col-xs-10 offset-xs-1 col-sm-5 col-md-3 col-xl-2"
 
     <!-- FOOTER -->
     <footer id="footerabout" class="section">
