--- a/Shareholder_Information.html
+++ b/Shareholder_Information.html
@@ -2,7 +2,6 @@
 <html lang="en-US">
 
   <head>
-
 <!-- Required meta tags -->
     <title>Shareholder Information</title>
     <meta charset="UTF-8">
@@ -22,7 +21,7 @@
   <body>
 
       <!-- NAVBAR -->
-      <div id="navbar">
+    <div id="navbar">
         <nav class="navbar navbar-fixed-top navbar-toggleable-sm transparent">
           <button class="navbar-toggler navbar-toggler-right" id="mainNav" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <div id="buttonDivs">
@@ -38,7 +37,7 @@
                 <a class="nav-link buttonContent" id="navHome" href="BerkshireFinalFinal.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link buttonContent" id="navNews" href="#news">News</a>
+                <a class="nav-link buttonContent" id="navNews" href="News.html">News</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link buttonContent" id="navShareholder" href="Shareholder_Information.html">Shareholders</a>
@@ -52,7 +51,7 @@
             </ul>
           </div>
         </nav>
-      </div>
+    </div>
 
 <!--Shareholder information-->
     <div class="card-group" id="shareholder">
