--- a/BerkshireFinalFinal.html
+++ b/BerkshireFinalFinal.html
@@ -36,7 +36,7 @@
               <a class="nav-link buttonContent" id="navHome" href="BerkshireFinalFinal.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link buttonContent" id="navNews" href="#news">News</a>
+              <a class="nav-link buttonContent" id="navNews" href="News.html">News</a>
             </li>
             <li class="nav-item">
               <a class="nav-link buttonContent" id="navShareholder" href="Shareholder_Information.html">Shareholders</a>
