--- a/Contact.html
+++ b/Contact.html
@@ -50,8 +50,8 @@
 <br>
 <br>
 <br>
-<div id="contact" class="contact"> 
-  <p id= "contact1">Contact Us</p>
+<div  id="contact" class="contact1">
+  <p id="contact1">Contact Us</p>
 </div>
 <br>
 <div id="navigation-bar" class="row">
@@ -130,18 +130,9 @@
           Omaha, NE 68131</p>
     </div>
   </div>
-      <footer id="footer" class="section">
-        <div class="d-flex justify-content-center" id="socialMedia">
-          <a href="https://www.facebook.com/BerkshireHathawayInc/" class="fa fa-facebook"></a>
-          <a href="https://twitter.com/BHHSRealEstate?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="fa fa-twitter"></a>
-          <a href="https://www.linkedin.com/company/berkshire-hathaway/" class="fa fa-linkedin"></a>
-          <a href="https://www.youtube.com/channel/UCrBKUuQDrkCNFjy4wF5ZWXw" class="fa fa-youtube"></a>
-        </div>
-        <div class="container" id="copyright">
-          <p>2017. Berkshire Hathaway. All Rights Reserved.</p>
-        </div>
-      </footer>
   
+
+
   <!-- Add icon library -->
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
