--- a/berkshireinc.html
+++ b/berkshireinc.html
@@ -81,25 +81,22 @@
 	<p id="storydescription2">Additionally, it manufactures structural investment castings and forged components, machined airframe components, and engineered critical fasteners; airfoil castings; titanium and nickel superalloy melted and mill products; and seamless pipes, fittings, and forgings. Our company distributes newspapers, televisions, and information; franchises and services quick service restaurants; distributes electronic components; and offers steel and logistics services, professional aviation training programs, and fractional aircraft ownership programs. In addition, we retails automobiles; furniture, bedding, and accessories; household appliances, electronics, and computers; jewelry, watches, crystal, china, stemware, flatware, gifts, and collectibles; kitchenware; and motorcycle accessories. Our company was founded in 1889 and is headquartered in Omaha, Nebraska </p>
 </div>
 
-	<div class="ig">
+<div class="ig">
 	<img id="story" src="img_random.jpg" style="width:100%;"></img> 
 	<div class="centered"></div>
   </div>
 
- <div id="box1" class= "circlepics" style="width:20%;"></img>
+ <div id="box1" class= "circlepics" style="width:20%;">
 			<a href="https://nl.wikipedia.org/wiki/Warren_Buffett"><img class="circle" id="warren" src= img_warren.jpg> </img></a>
-			<div id="overlay">
-				<span id="plus">Warren Buffet - CEO </span>
-			</div>
-</div> 
-
 			<a href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=255257&privcapId=255251&previousCapId=258278&previousTitle=Berkshire%20Hathaway%20Energy%20Company">	<img class="circle" id="marc"src= img_marc.jpg> </img></a>
 			<a href="https://en.wikipedia.org/wiki/Charlie_Munger"><img class="circle" id="charlie" src= img_charlie.jpg> </img></a>
 			<a href="https://en.wikipedia.org/wiki/Oliver_Chace"><img class="circle" id="oliver" src= img_oliver.jpg> </img><a/>
  </div>
 
-
- <div class="card col-xs-10 offset-xs-1 col-sm-5 col-md-3 col-xl-2"
+ <div class="container" id="storytext2"> 
+	<p id="governance"> In May 2010, Buffett, months away from his 80th birthday, said he would be succeeded at Berkshire Hathaway by a team consisting of a CEO and three or four investment managers; each of the latter would be responsible for a "significant portion of Berkshire's investment portfolio". Five months later, Berkshire announced that Todd Combs, manager of the hedge fund Castle Point Capital, would join them as an investment manager. On September 12, 2011, Berkshire Hathaway announced that 50-year-old Ted Weschler, founder of Peninsula Capital Advisors, will join Berkshire in early 2012 as a second investment manager </p>
+	<p id="governance2">In Berkshire Hathaway's annual shareholder letter dated February 25, 2012, Buffett said that his successor as CEO had been chosen internally but not named publicly. While the intent of this message was to bolster confidence in the leadership of a "Buffett-less Berkshire", critics have noted that this strategy of choosing a successor without a concrete exit strategy for the sitting CEO often leaves an organization with fewer long term options, while doing little to calm shareholder fear. </p>
+</div>
 
     <!-- FOOTER -->
     <footer id="footerabout" class="section">
