--- a/News.html
+++ b/News.html
@@ -5,54 +5,117 @@
     <meta charset="UTF-8">
     <title>News</title>
     <link rel="stylesheet" type="text/css" href="BerkshireFinalFinal.css">
+    <link rel="stylesheet" href="News.css">
+    <link rel="stylesheet" href="News.js">
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <script language="JavaScript" type="text/javascript" src="Berkshire-JS.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBY9I6jyCaTXuqxCs7ZHPddfj0lQr0Hmz8&callback=initMap">
+    </script>
+
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div id=Reports class="col-lg-4">
-                <div class="card" style="width: 20rem;">
-                    <div class="card-body">
-                        <h4 class="card-title">Annual and Interim Reports</h4>
-                        <h6 class="card-subtitle mb-2 text-muted">2017</h6>
-                        <p class="card-text">"Increased stock of Apple and Bank of New York Mellon, while reducing International Business Machines.Twenty-First Century Fox dropped."</p>
-                        <a href="http://www.berkshirehathaway.com/qtrly/links1stqtr17.html" class="card-link">1. Quarter</a>
-                        <a href="http://www.berkshirehathaway.com/qtrly/links2ndqtr17.html" class="card-link">2. Quarter</a>
-                        <a href="http://www.berkshirehathaway.com/qtrly/links3rdqtr17.html" class="card-link">3. Quarter</a>
+    <!-- NAVBAR -->
+    <div id="navbar">
+        <nav class="navbar navbar-fixed-top navbar-toggleable-sm transparent">
+            <button class="navbar-toggler navbar-toggler-right" id="mainNav" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <div id="buttonDivs">
+            <div class="buttonBar" id="bar1"></div>
+            <div class="buttonBar" id="bar2"></div>
+            <div class="buttonBar" id="bar3"></div>
+          </div>
+        </button>
+            <a class="navbar-brand col-md-4" href="BerkshireFinalFinal.html"><img id="logo" src="logo.png"></a>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link buttonContent" id="navHome" href="BerkshireFinalFinal.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link buttonContent" id="navNews" href="#news">News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link buttonContent" id="navShareholder" href="Shareholder_Information.html">Shareholders</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link buttonContent" id="navBerkshire" href="berkshireinc.html">Berkshire Inc.</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link buttonContent" id="navContact" href="Contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div id=Reports class="col-lg-4">
+                    <div class="card" style="width: 20rem;">
+                        <div class="card-body">
+                            <h4 class="card-title">Annual and Interim Reports</h4>
+                            <h6 class="card-subtitle mb-2 text-muted">2017</h6>
+                            <p class="card-text">"Increased stock of Apple and Bank of New York Mellon, while reducing International Business Machines.Twenty-First Century Fox dropped."</p>
+                            <a href="http://www.berkshirehathaway.com/qtrly/links1stqtr17.html" class="card-link">1. Quarter</a>
+                            <a href="http://www.berkshirehathaway.com/qtrly/links2ndqtr17.html" class="card-link">2. Quarter</a>
+                            <a href="http://www.berkshirehathaway.com/qtrly/links3rdqtr17.html" class="card-link">3. Quarter</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div id=AGM_Info class="col-lg-4">
-                <div class="card" style="width: 20rem;">
-                    <div class="card-body">
-                        <h4 class="card-title">Annual General Meeting</h4>
-                        <h6 class="card-subtitle mb-2 text-muted">Info</h6>
-                        <p class="card-text">For the third year, Yahoo will webcast the May 5 meeting, going live at 9am. <a href="https://finance.yahoo.com/brklivestream">Watch the Stream Here</a></p>
-                        <a href="http://www.berkshirehathaway.com/meet01/2018Meetinginfo.pdf" class="card-link">2018</a>
-                        <a href="http://www.berkshirehathaway.com/meet01/VisGuide2017.pdf" class="card-link">2017</a>
+                <div id=AGM_Info class="col-lg-4">
+                    <div class="card" style="width: 20rem;">
+                        <div class="card-body">
+                            <h4 class="card-title">Annual General Meeting</h4>
+                            <h6 class="card-subtitle mb-2 text-muted">Info</h6>
+                            <p class="card-text">For the third year, Yahoo will webcast the May 5 meeting, going live at 9am. <a href="https://finance.yahoo.com/brklivestream">Watch the Stream Here</a></p>
+                            <a href="http://www.berkshirehathaway.com/meet01/2018Meetinginfo.pdf" class="card-link">2018</a>
+                            <a href="http://www.berkshirehathaway.com/meet01/VisGuide2017.pdf" class="card-link">2017</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div id="News_Releases" class="col-lg-4">
-                <div class="card" style="width: 20rem;">
-                    <div class="card-body">
-                        <h4 class="card-title">News</h4>
-                        <h6 class="card-subtitle mb-2 text-muted">Past 4 Year Releases</h6>
-                        <p class="card-text">"A very impressed market has traded Apple's stock up by 45% since the beginning of the year. This has nicely lifted the value of Berkshire's stake, which according to the company's latest regulatory filing stands at over 130 million shares." - The Motley Fool</p>
-                        <a href="http://www.berkshirehathaway.com/news/2017news.html" class="card-link">2017</a>
-                        <a href="http://www.berkshirehathaway.com/news/2016news.html" class="card-link">2016</a>
-                        <a href="http://www.berkshirehathaway.com/news/2015news.html" class="card-link">2015</a>
-                        <a href="http://www.berkshirehathaway.com/news/2014news.html" class="card-link">2014</a>
+                <div id="News_Releases" class="col-lg-4">
+                    <div class="card" style="width: 20rem;">
+                        <div class="card-body">
+                            <h4 class="card-title">News</h4>
+                            <h6 class="card-subtitle mb-2 text-muted">Past 4 Year Releases</h6>
+                            <p class="card-text">"A very impressed market has traded Apple's stock up by 45% since the beginning of the year. This has nicely lifted the value of Berkshire's stake, which according to the company's latest regulatory filing stands at over 130 million shares." - The Motley Fool</p>
+                            <a href="http://www.berkshirehathaway.com/news/2017news.html" class="card-link">2017</a>
+                            <a href="http://www.berkshirehathaway.com/news/2016news.html" class="card-link">2016</a>
+                            <a href="http://www.berkshirehathaway.com/news/2015news.html" class="card-link">2015</a>
+                            <a href="http://www.berkshirehathaway.com/news/2014news.html" class="card-link">2014</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+    <section>
+        <div id="floating-panel">
+            <b>Start: </b>
+            <select id="start">
+      <option value="omaha, ne"></option>
+      <option value="penn station, new york, ny">New York</option>
+      <option value="union station, los angeles, ca">Los Angeles</option>
+      <option value="union station, chicago, il">Chicago</option>
+      <option value="union station, phoenix, az">Phoenix</option>
+      <option value="central station main, houston, tx">Houston</option>
+      <option value="san antonio, tx">San Antonio</option>
+      <option value="san diego, ca">San Diego</option>
+      <option value="dallas, tx">Dallas</option>
+      <option value="san jose, ca">San Jose</option>
+    </select>
+            <b>End: </b>
+            <select id="end">
+      <option value="3555 Farnam St Omaha NE 68131">Berkshire Hathaway HQ</option>
+    </select>
+        </div>
+        <div id="map"></div>
+        &nbsp;
+        <div id="warnings-panel"></div>
+    </section>
     <!-- FOOTER -->
     <footer id="footerabout" class="section">
         <div class="d-flex justify-content-center" id="socialMedia">
@@ -67,7 +130,6 @@
     </footer>
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 </body>
 
 </html>
