--- a/BerkshireFinalFinal.html
+++ b/BerkshireFinalFinal.html
@@ -30,7 +30,7 @@
             <div class="buttonBar" id="bar3"></div>
           </div>
         </button>
-        <a class="navbar-brand col-md-4" href="BerkshireFinalFinal.html"><img id="logo" src="logo.png"></img></a>
+        <a class="navbar-brand col-md-4" href="BerkshireFinalFinal.html"><img id="logo" src="logo.png"></a>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -70,7 +70,7 @@
           </div>
       </div>
     <div class="carousel-item">
-        <img class="d-block" src="company.jpg"   "alt="Contact us">
+        <img class="d-block" src="company.jpg"alt="Contact us">
           <div class="carousel-caption d-none d-md-block" >
             <h3> Help us expand our portfolio and we will help you develop your business </h3>
             <div class="d-flex justify-content-center" >
