--- a/API folder/Berkshire-shareholders.html
+++ b/API folder/Berkshire-shareholders.html
@@ -56,10 +56,31 @@
     <div id="buffett-bucket">
     </div>
 
+    <div class="box">
+<div class="floatleft2 " style="padding:5px;">
+    <div>Stock Name Info</div>
+    <div>Stock Name Info</div>
+    <div>Stock Name Info</div>
+    <div>Stock Name Info</div>
+</div>
+<div class="floatleft2" style="padding:5px;">
+    <div>Symbol Info</div>
+    <div>Symbol Info</div>
+    <div>Symbol Info</div>
+    <div>Symbol Info</div>
+</div>
+<div class="floatleft2" style="padding:5px;">
+    <div>Figure Info</div>
+    <div>Figure Info</div>
+    <div>Figure Info</div>
+    <div>Figure Info</div>
+</div>
+</div>
 
 
 
     <!--Scripts-->
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" ></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" ></script>
