--- a/BerkshireFinalFinal.html
+++ b/BerkshireFinalFinal.html
@@ -54,7 +54,7 @@
     </div>
 
 <!--Nav: Home-->
-  <div class="container">
+  <div class="container" id="car">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
