Changes to Navbar and Section
Also removed "our story" from home page

--- a/BerkshireFinalFinal.html
+++ b/BerkshireFinalFinal.html
@@ -99,7 +99,7 @@
     <!--Nav: Description-->
     <div class="container-page">
       <div class="story-title">
-        <p class="title">Our Story</p>
+        <p class="title"></p>
         <span id="bar"></span>
       </div>
     </div>
