I linked the files porperly and fixed the display of the map and search panel

--- a/News.html
+++ b/News.html
@@ -14,11 +14,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" />
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans%3A400%2C+300%2C400%2C600%2C700%2C800%26subset%3Dlatin%2Clatin-ext&amp;ver=1.8' type='text/css' media='all' />
     <link rel="stylesheet" href="News.css">
-    <link rel="stylesheet" href="News.js">
-    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
-    <script language="JavaScript" type="text/javascript" src="Berkshire-JS.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -99,38 +94,6 @@
         </div>
     </section>
     <section>
-       <style>
-        /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-
-        #map {
-            height: 400px;
-            width: 100%;
-        }
-
-        /* Optional: Makes the sample page fill the window. */
-
-        #floating-panel {
-            position: absolute;
-            top: 10px;
-            left: 25%;
-            z-index: 5;
-            background-color: #fff;
-            padding: 5px;
-            border: 1px solid #999;
-            text-align: center;
-            font-family: 'Roboto', 'sans-serif';
-            line-height: 30px;
-            padding-left: 10px;
-        }
-
-        #warnings-panel {
-            width: 100%;
-            height: 10%;
-            text-align: center;
-        }
-
-    </style>
         <div id="floating-panel">
             <b>Start: </b>
             <select id="start">
@@ -144,7 +107,7 @@
       <option value="san diego, ca">San Diego</option>
       <option value="dallas, tx">Dallas</option>
       <option value="san jose, ca">San Jose</option>
-      
+
     </select>
 
             <b>End: </b>
@@ -267,6 +230,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
     <script language="JavaScript" type="text/javascript" src="Berkshire-JS.js"></script>
+    <script language="JavaScript" type="text/javascript" src="News.js"></script>
 </body>
 
 </html>
