--- a/Contact.html
+++ b/Contact.html
@@ -125,11 +125,11 @@
 <br>
 <div class="jumbotron jumbotron-fluid" style="width:100%;">
     <div class="container">
-      <h3 class="display-3">Contact Information</h1>
+      <h3 class="display-3">Contact Information</h3>
       <p class="lead">3555 Farnam Street
           Omaha, NE 68131</p>
     </div>
-  </div>
+</div>
   <section>
        <style>
         /* Always set the map height explicitly to define the size of the div
@@ -143,7 +143,7 @@
             
         }
 
-        /* Optional: Makes the sample page fill the window. */
+        /* CSS for map */
 
         #floating-panel {
             position: absolute;
