again small layout

--- a/Contact.html
+++ b/Contact.html
@@ -47,16 +47,12 @@
         </div>
       </nav>
     </div>
-<br>
-<br>
-<br>
-<div  id="contact" class="contact1">
-  <p id="contact1">Contact Us</p>
-</div>
-<br>
-<div id="navigation-bar" class="row">
+
+	  <div class="container" id="contact1">
+		<p id="contacttxt">CONTACT US</p>
+	</div>
     
-    <form class="col-md-8 offset-md-2" enctype="multipart/form-data">
+    <form id="form1"class="col-md-8 offset-md-2" enctype="multipart/form-data">"
        
         <div class="form-group row">
               <label for="first_name" class="col-4 col-form-label">First name</label>
@@ -123,14 +119,25 @@
     </div>
 </div>
 <br>
-<div class="jumbotron jumbotron-fluid" style="width:100%;">
-    <div class="container">
-      <h3 class="display-3">Contact Information</h1>
+<div class="jumbotron" style="width:100%;">
+    <div class="container1">
+      <p id="contact2"class="display-3">CONTACT INFORMATION</P>
       <p class="lead">3555 Farnam Street
           Omaha, NE 68131</p>
     </div>
   </div>
   
+    <footer id="footercontact" class="section">
+        <div class="d-flex justify-content-center" id="socialMedia">
+      		<a href="https://www.facebook.com/BerkshireHathawayInc/" class="fa fa-facebook"></a>
+      		<a href="https://twitter.com/BHHSRealEstate?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="fa fa-twitter"></a>
+      		<a href="https://www.linkedin.com/company/berkshire-hathaway/" class="fa fa-linkedin"></a>
+      		<a href="https://www.youtube.com/channel/UCrBKUuQDrkCNFjy4wF5ZWXw" class="fa fa-youtube"></a>
+      	</div>
+        <div class="container" id="copyright">
+          <p>2017. Berkshire Hathaway. All Rights Reserved.</p>
+        </div>
+    </footer>
 
 
   <!-- Add icon library -->
