idk what changes those are

--- a/Shareholder_Information.html
+++ b/Shareholder_Information.html
@@ -55,7 +55,7 @@
 
 <!--Shareholder information-->
 
-    <div>
+    <div class="container" id="comingsoon">
       <p class="coming"> Coming soon</p>
     </div>
 
