linked the pages

--- a/berkshireinc.html
+++ b/berkshireinc.html
@@ -52,7 +52,7 @@
               <a class="nav-link buttonContent" id="navHome" href="BerkshireFinalFinal.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link buttonContent" id="navNews" href="#news">News</a>
+              <a class="nav-link buttonContent" id="navNews" href="News.html">News</a>
             </li>
             <li class="nav-item">
               <a class="nav-link buttonContent" id="navShareholder" href="Shareholder_Information.html">Shareholders</a>
@@ -69,9 +69,9 @@
     </div>
 
     <!--Nav: Home-->
-  
+
   <div class="bg">
-	<img id="story" src="img_story.jpg" style="width:100%;"></img> 
+	<img id="story" src="img_story.jpg" style="width:100%;"></img>
 	<div class="centered"></div>
   </div>
 
@@ -82,7 +82,7 @@
 </div>
 
 <div class="ig">
-	<img id="story" src="img_random.jpg" style="width:100%;"></img> 
+	<img id="story" src="img_random.jpg" style="width:100%;"></img>
 	<div class="centered"></div>
   </div>
 
@@ -93,7 +93,7 @@
 	<a href="https://en.wikipedia.org/wiki/Oliver_Chace"><img class="circle" id="oliver" src= img_oliver.jpg> </img><a/>
  </div>
 
- <div class="container" id="storytext2"> 
+ <div class="container" id="storytext2">
 	<p id="governance"> In May 2010, Buffett, months away from his 80th birthday, said he would be succeeded at Berkshire Hathaway by a team consisting of a CEO and three or four investment managers; each of the latter would be responsible for a "significant portion of Berkshire's investment portfolio". Five months later, Berkshire announced that Todd Combs, manager of the hedge fund Castle Point Capital, would join them as an investment manager. On September 12, 2011, Berkshire Hathaway announced that 50-year-old Ted Weschler, founder of Peninsula Capital Advisors, will join Berkshire in early 2012 as a second investment manager </p>
 	<p id="governance2">In Berkshire Hathaway's annual shareholder letter dated February 25, 2012, Buffett said that his successor as CEO had been chosen internally but not named publicly. While the intent of this message was to bolster confidence in the leadership of a "Buffett-less Berkshire", critics have noted that this strategy of choosing a successor without a concrete exit strategy for the sitting CEO often leaves an organization with fewer long term options, while doing little to calm shareholder fear. </p>
 </div>
